Changes to Interface

--- a/Code/Interface/Interface.csproj
+++ b/Code/Interface/Interface.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomerUI.cs" />
+    <Compile Include="EmployeeUI.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
