--- a/Code/Core/Core.csproj
+++ b/Code/Core/Core.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Address.cs" />
     <Compile Include="Customer.cs" />
     <Compile Include="CustomerRepository.cs" />
+    <Compile Include="CustomExceptions\InvalidLoginException.cs" />
     <Compile Include="CustomExceptions\NoUserException.cs" />
     <Compile Include="Database.cs" />
     <Compile Include="Employee.cs" />
