--- a/Code/Interface/Interface.csproj
+++ b/Code/Interface/Interface.csproj
@@ -47,6 +47,7 @@
     <Compile Include="EmployeeUI.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScheduleUI.cs" />
     <Compile Include="Validator.cs" />
   </ItemGroup>
   <ItemGroup>
