--- a/Code/Tests.Core/Tests.Core.csproj
+++ b/Code/Tests.Core/Tests.Core.csproj
@@ -45,6 +45,7 @@
     <Compile Include="DatabaseTest.cs" />
     <Compile Include="EmployeeTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj">
